--- a/arch/arm64/configs/pdx201_defconfig
+++ b/arch/arm64/configs/pdx201_defconfig
@@ -425,13 +425,10 @@ CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_DRM=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_DRM_SDE_SPECIFIC_PANEL=y
-CONFIG_FB_ARMCLCD=y
-CONFIG_FB_VIRTUAL=y
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -679,5 +676,3 @@ CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
-# CONFIG_RMNET_PERF is not set
-# CONFIG_RMNET_SHS is not set
