defconfig: pdx201: Enable QCACLD
Change-Id: I22b3d3adf31c95a91275d0c795403b4097201430

--- a/arch/arm64/configs/pdx201_defconfig
+++ b/arch/arm64/configs/pdx201_defconfig
@@ -535,6 +535,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_TNG_VMPRESSURE=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_TNG_PSI=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_STATS=y
 CONFIG_ION=y
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QPNP_REVID=y
 CONFIG_SPS=y
