--- a/arch/arm64/configs/pdx201_defconfig
+++ b/arch/arm64/configs/pdx201_defconfig
@@ -666,12 +666,12 @@ CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_DEBUG_LIST=y
 # CONFIG_TRACING_EVENTS_GPIO is not set
 CONFIG_SECURITY=y
+CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/corecatcher"
 CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_SMACK=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_XCBC=y
