--- a/arch/arm64/configs/pdx201_defconfig
+++ b/arch/arm64/configs/pdx201_defconfig
@@ -664,7 +664,6 @@ CONFIG_TMPFS_POSIX_ACL=y
 # CONFIG_EFIVAR_FS is not set
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
-CONFIG_SDCARD_FS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
@@ -673,6 +672,7 @@ CONFIG_PSTORE_RAM=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
+CONFIG_UNICODE=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
