--- a/arch/arm64/configs/pdx201_defconfig
+++ b/arch/arm64/configs/pdx201_defconfig
@@ -37,6 +37,7 @@ CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_EMBEDDED=y
+# CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
@@ -403,9 +404,7 @@ CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_MSM_CAMERA=y
-CONFIG_MSM_CAMERA_DEBUG=y
 CONFIG_MSMB_CAMERA=y
-CONFIG_MSMB_CAMERA_DEBUG=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -418,15 +417,6 @@ CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 CONFIG_MSM_DUAL_ISP_SYNC=y
-CONFIG_IMX134=y
-CONFIG_IMX132=y
-CONFIG_OV9724=y
-CONFIG_OV5648=y
-CONFIG_GC0339=y
-CONFIG_OV8825=y
-CONFIG_OV8865=y
-CONFIG_s5k4e1=y
-CONFIG_OV12830=y
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
@@ -434,10 +424,8 @@ CONFIG_MSM_JPEGDMA=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
+# CONFIG_VGA_ARB is not set
 CONFIG_DRM=y
-CONFIG_DRM_MSM_REGISTER_LOGGING=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_DRM_SDE_SPECIFIC_PANEL=y
 CONFIG_FB_ARMCLCD=y
@@ -592,7 +580,6 @@ CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_ICNSS_QMI=y
 CONFIG_QCOM_EUD=y
-CONFIG_QCOM_MINIDUMP=y
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_COMMAND_DB=y
 CONFIG_QCOM_EARLY_RANDOM=y
@@ -672,8 +659,6 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DYNAMIC_DEBUG=y
-CONFIG_DEBUG_INFO=y
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_ON_OOPS=y
@@ -681,7 +666,6 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_DEBUG_LIST=y
-CONFIG_IPC_LOGGING=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_SECURITY=y
 CONFIG_HARDENED_USERCOPY=y
